Trying to fix stretch

--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ body {
 .collapsible {
     cursor: pointer;
     padding: 18px;
-    width: 100%;
     border: 1px solid #ddd;
     text-align: left;
     outline: none;
@@ -56,7 +55,7 @@ body {
 footer {
     text-align: center;
     font-weight: bold;
-    padding: 20px;
+    padding: 10px;
     background-color: #333;
     color: #fff;
 }
